grammar.js
    source_file: ($) =>
      seq(optional($._nl), prec.left(listSep($._element, $._nl))),

    _element: ($) =>
      choice(
        $._definition,
        $._statement,
        $._standalone_label,
        $._standalone_comment,
        $._block,
      ),

    _start_line: ($) => choice($._label, $._ws),

    //----------------------------------------------------------------------
    // Labels:
    //----------------------------------------------------------------------

    _name: ($) => field("name", $._identifier),

    _label_definition: ($) =>
      seq(choice($._label_colon, $._name), optional($._ws)),

    // colon required with leading whitespace
    comment: ($) => choice($._comment_star, $._comment_hash),
    _comment_hash: () => /#[^\n\r]*/,
    _comment_star: () => /\*[^\n\r]*/,

    _end_line: ($) =>
      choice(
        seq(optional($._ws), alias($._comment_hash, $.comment)),
        // Start comment must have whitespace to avoid conflict with multiplication operator
        // TODO: would be better if whitepace didn't form part of comment pattern
        // This would be handled by positional comment if I could get precedence right
        alias(/\s+\*.+/, $.comment),
        seq($._ws, alias(/[^\r\n]+/, $.comment)), // Positional comment - any chars allowed after statement
      ),

    //----------------------------------------------------------------------
    // Mnemonics:
    //----------------------------------------------------------------------

    // instructions:

    _instruction_mnemonic_op: ($) =>
      alias(mnemonicChoice(instructions), $.instruction_mnemonic),
    _instruction_mnemonic_noop: ($) =>
      alias(mnemonicChoice(instructionsNoOperands), $.instruction_mnemonic),

    // directives:

    _data_constant_mnemonic: ($) =>
      alias(mnemonicChoice(["dc", "dr"]), $.directive_mnemonic),
    _data_constant_short_mnemonic: ($) =>
      alias(mnemonicChoice(["db", "dw", "dl"]), $.directive_mnemonic),
    _data_space_mnemonic: ($) =>
      alias(mnemonicChoice(["dcb", "blk"]), $.directive_mnemonic),
    _data_space_short_mnemonic: ($) =>
      alias(caseInsensitive("ds"), $.directive_mnemonic),
    _directive_mnemonic_noop: ($) =>
      alias(mnemonicChoice(directiveNoOperands), $.directive_mnemonic),
    _directive_mnemonic_op: ($) =>
      alias(mnemonicChoice(directives), $.directive_mnemonic),
    _incbin_mnemonic: ($) =>
      alias(caseInsensitive("incbin"), $.directive_mnemonic),
    _include_mnemonic: ($) =>
      alias(caseInsensitive("include"), $.directive_mnemonic),
    _symbol_assignment_mnemonic: ($) =>
      alias(caseInsensitive("set"), $.directive_mnemonic),
    _symbol_definition_mnemonic: ($) =>
      alias(mnemonicChoice(["equ", "fequ"]), $.directive_mnemonic),

    // control:

    _macro_mnemonic: ($) => alias(caseInsensitive("macro"), $.control_mnemonic),
    _endm_mnemonic: ($) => alias(caseInsensitive("endm"), $.control_mnemonic),
    instruction: ($) =>
      prec.right(
        choice(
          // Instruction with operands
          seq(
            field("mnemonic", $._instruction_mnemonic_op),
            optional(seq(".", field("size", $._size))),
            seq($._ws, field("operands", $.operand_list)),
          ),
          // Instruction with no operands
          seq(
            field("mnemonic", $._instruction_mnemonic_noop),
            optional(seq(".", field("size", $._size))),
          ),
        ),
      ),

    operand_list: ($) => listSep($._operand, $._sep),

    _operand: ($) =>
      choice($._effective_address, $.register_list, $._expression),

    _size: ($) => choice($.size, $.macro_arg),
    size: () => /[bwlsdxqBWLSDXQ]/,

    //----------------------------------------------------------------------
    // Directives:
    //----------------------------------------------------------------------

    directive: ($) =>
      prec.right(
        choice(
          seq(
            field("mnemonic", $._directive_mnemonic_noop),
            optional(seq(".", field("size", $._size))),
          ),
          seq(
            field("mnemonic", $._directive_mnemonic_op),
            optional(seq(".", field("size", $._size))),
            $._ws,
            field("operands", $.operand_list),
          ),
        ),
      ),

    // section

    include: ($) => seq($._include_mnemonic, $._ws, field("path", $.path)),
    include_bin: ($) =>
      seq(
        $._incbin_mnemonic,
        $._ws,
        field("path", $.path),
        optional(
          seq(
            $._sep,
            field("offset", $._expression),
            optional(seq(",", field("length", $._expression))),
            optional($._sep),
          ),
        ),
      ),

    path: ($) => choice(/[^"'\s,]+/, $.string_literal),

    // data:

    data_constant: ($) =>
      seq(
        choice(
          seq(
            field("mnemonic", $._data_constant_mnemonic),
            optional(seq(".", field("size", $._size))),
          ),
          field("mnemonic", $._data_constant_short_mnemonic),
        ),
        $._ws,
        field("values", $.expression_list),
      ),

    data_space: ($) =>
      choice(
        seq(
          field("mnemonic", $._data_space_short_mnemonic),
          optional(seq(".", field("size", $._size))),
          $._ws,
          field("length", $._expression),
        ),
        seq(
          field("mnemonic", $._data_space_mnemonic),
          optional(seq(".", field("size", $._size))),
          $._ws,
          field("length", $._expression),
          optional(seq($._sep, field("fill", $._expression))),
          optional($._sep),
        ),
      ),

    // Macro call:

    macro_call: ($) =>
      prec.right(
        seq(
          $._name,
          optional(seq(".", field("qualifier", $._size))),
          optional(seq($._ws, field("operands", $.operand_list))),
          optional($._ws),
        ),
      ),

    //----------------------------------------------------------------------
    // Block / multiline:
    //----------------------------------------------------------------------

    macro_definition: ($) =>
      prec(
        PREC.definition,
        seq(
          choice(
            seq($._label_definition, $._macro_mnemonic),
            seq($._ws, $._macro_mnemonic, $._ws, field("name", $.symbol)),
          ),
          optional($._end_line),
          $._nl,
          optional(seq(field("body", $.element_list), $._nl)),
          $._start_line,
          $._endm_mnemonic,
          optional($._end_line),
        ),
      ),

    //----------------------------------------------------------------------
    // Definitions
    //----------------------------------------------------------------------

    symbol_definition: ($) =>
      prec(
        PREC.definition,
        seq(
          $._label_definition,
          choice(
            seq(
              "=",
              optional(seq(".", field("size", alias(/[sdxpSDXP]/, $.size)))),
              optional($._ws),
            ),
            seq(
              field("mnemonic", $._symbol_definition_mnemonic),
              optional(seq(".", field("size", alias(/[sdxpSDXP]/, $.size)))),
              $._ws,
            ),
          ),
          field("value", $._expression),
          optional($._end_line),
        ),
      ),

    symbol_assignment: ($) =>
      prec(
        PREC.definition,
        seq(
          $._label_definition,
          $._symbol_assignment_mnemonic,
          optional($._ws),
          field("value", $._expression),
          optional($._end_line),
        ),
      ),

    immediate_value: ($) => seq("#", field("value", $._expression)),

    absolute_value: ($) =>
      choice(
        seq(field("value", $._expression), ".", field("size", $._size)),
        seq("(", field("value", $._expression), ").", field("size", $._size)),
      ),

    _expression: ($) =>
      choice(
        $._numeric_literal,
        $.string_literal,
        $.unary_expression,
        $.binary_expression,
        $.parenthesized_expression,
        $._identifier,
      ),

    hexadecimal_literal: () => /\$[0-9A-Fa-z]+/,
    decimal_literal: () =>
      prec.left(choice(/\d+/, seq(optional(/\d+/), ".", /\d+/))),

    string_literal: ($) =>
      choice(
        // Single quoted
        seq(
          "'",
          repeat(
            choice(
              prec(1, /[^'\n\\]+/), // Normal chars
              "''", // Repeat quote escape
              $._string_escape_codes,
            ),
          ),
          "'",
        ),
        // Double quoted
        seq(
          '"',
          repeat(choice(prec(1, /[^"\n\\]+/), '""', $._string_escape_codes)),
          '"',
        ),
      ),

    _string_escape_codes: ($) =>
      choice(
        /\\[\\bfnrt"'e]/, // Single char escape codes
        /\\[0-7]+/, // Octal character code
        /\\[xX][0-9a-f]+/, // Hex charcter code
        $.macro_arg,
      ),

    //----------------------------------------------------------------------
    // Identifiers
    //----------------------------------------------------------------------

    symbol: ($) =>
      prec.right(
        seq(repeat1(seq(optional("."), $._symbol_chars)), optional("$")),
      ),
    _symbol_chars: () => /[a-zA-Z0-9_%]+/,

    //----------------------------------------------------------------------
    // Misc:
    //----------------------------------------------------------------------

    _sep: () => /\s*,\s*/,
    _ws: () => /[ \t]+/,
    _nl: () => /([ \t]*(\r\n|\n|\r))+/,
  },
});

function listSep(rule, sep = ",") {
  return seq(repeat(seq(rule, sep)), rule, optional(sep));
}

function toCaseInsensitive(a) {
  var ca = a.charCodeAt(0);
  if (ca >= 97 && ca <= 122) return `[${a}${a.toUpperCase()}]`;
  if (ca >= 65 && ca <= 90) return `[${a.toLowerCase()}${a}]`;
  return a;
}

function caseInsensitive(keyword) {
  return new RegExp(keyword.split("").map(toCaseInsensitive).join(""));
}

function mnemonicChoice(options) {
  return choice(...options.map(caseInsensitive));
}
