test/corpus/data.txt
================================================================================
.byte
================================================================================
.byte
--------------------------------------------------------------------------------
(source_file
  (data_constant
    mnemonic: (directive_mnemonic)))

================================================================================
.byte 0xFF
================================================================================
.byte 0xFF
--------------------------------------------------------------------------------
(source_file
  (data_constant
    mnemonic: (directive_mnemonic)
    values: (expressions (hexadecimal_literal))))

================================================================================
.word
================================================================================
.word
--------------------------------------------------------------------------------
(source_file
  (data_constant
    mnemonic: (directive_mnemonic)))

================================================================================
.word 0x00FF
================================================================================
.word 0x00FF
--------------------------------------------------------------------------------
(source_file
  (data_constant
    mnemonic: (directive_mnemonic)
    values: (expressions (hexadecimal_literal))))

================================================================================
.dc
================================================================================
.dc
--------------------------------------------------------------------------------
(source_file
  (data_constant
    mnemonic: (directive_mnemonic)))

================================================================================
.dc 1,2,3
================================================================================
.dc 1,2,3
--------------------------------------------------------------------------------
(source_file
  (data_constant
    mnemonic: (directive_mnemonic)
    values: (expressions
      (decimal_literal)
      (decimal_literal)
      (decimal_literal))))

================================================================================
.dc.b 4,2
:skip
================================================================================
.dc.b 4,2
--------------------------------------------------------------------------------
(source_file
  (data_constant
    mnemonic: (directive_mnemonic)
    size: (size)
    values: (expressions
      (decimal_literal)
      (decimal_literal))))

================================================================================
.ds 10
================================================================================
.ds 10
--------------------------------------------------------------------------------
(source_file
  (data_space
    mnemonic: (directive_mnemonic)
    number: (decimal_literal)))

================================================================================
.ds 2,0xFFFF
================================================================================
.ds 2,0xFFFF
--------------------------------------------------------------------------------
(source_file
  (data_space
    mnemonic: (directive_mnemonic)
    number: (decimal_literal)
    fill: (hexadecimal_literal)))

================================================================================
.ds.b 2,0xFF
:skip
================================================================================
.ds.b 2,0xFF
--------------------------------------------------------------------------------
(source_file
  (data_space
    mnemonic: (directive_mnemonic)
    number: (decimal_literal)
    fill: (hexadecimal_literal)))
