test/corpus/elements.txt
================================================================================
Empty source file
================================================================================
--------------------------------------------------------------------------------
(source_file)

================================================================================
New lines only source file
================================================================================


--------------------------------------------------------------------------------
(source_file)

================================================================================
Indented element with empty lines before and after
================================================================================

    .eqv TestSymbol, 1

--------------------------------------------------------------------------------
(source_file
  (symbol_definition
    (directive_mnemonic)
    (symbol)
    value: (decimal_literal)))

================================================================================
Elements with no "\n" in between
:error
================================================================================
    .eqv TestSymbol, 1 .eqv TestSymbol, 1
--------------------------------------------------------------------------------
