test/corpus/string_literals.txt
================================================================================
.asciz "\037asdf"
================================================================================
.asciz "\xFFa\037sdf"
--------------------------------------------------------------------------------
(source_file
  (directive
    (directive_mnemonic)
    (expressions
      (string_literal
        (string_escape_code)
        (string_escape_code)))))

